--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
     <h1>Pamela Namala</h1>
     <p>Data Analyst | Business Intelligence | Storytelling with Data</p>
     <div class="contact">
-      <a href="mailto:your-email@example.com"><i class="fas fa-envelope"></i> your-email@example.com</a>
-      <a href="https://www.linkedin.com/in/your-linkedin" target="_blank"><i class="fab fa-linkedin"></i> LinkedIn</a>
-      <a href="https://github.com/yourgithub" target="_blank"><i class="fab fa-github"></i> GitHub</a>
+      <a href="mailto:namala.pamela@gmail.com"><i class="fas fa-envelope"></i> namala.pamela@gmail.com</a>
+      <a href="https://www.linkedin.com/in/namala-pamela/" target="_blank"><i class="fab fa-linkedin"></i> LinkedIn</a>
+      <!-- <a href="https://github.com/yourgithub" target="_blank"><i class="fab fa-github"></i> GitHub</a> -->
     </div>
   </header>
 
@@ -68,6 +68,26 @@
         <!-- Pagination -->
         <div class="swiper-pagination"></div>
       </div>
+    </section>
+
+    <!-- Sample Reports Section -->
+    <section>
+      <h2>Sample Reports</h2>
+      <p>Download or view my sample dashboards and reports in PDF format:</p>
+      <ul class="reports">
+        <li>
+          <i class="fas fa-file-pdf"></i>
+          <a href="reports/financial_dashboard.pdf" target="_blank">Financial Dashboard Report</a>
+        </li>
+        <li>
+          <i class="fas fa-file-pdf"></i>
+          <a href="reports/survey_analysis.pdf" target="_blank">Survey Analysis Report</a>
+        </li>
+        <li>
+          <i class="fas fa-file-pdf"></i>
+          <a href="reports/business_intelligence_summary.pdf" target="_blank">Business Intelligence Summary</a>
+        </li>
+      </ul>
     </section>
   </main>
 
