--- a/index.html
+++ b/index.html
@@ -81,11 +81,15 @@
         </li>
         <li>
           <i class="fas fa-file-pdf"></i>
-          <a href="reports/survey_analysis.pdf" target="_blank">Survey Analysis Report</a>
+          <a href="reports/Ride Cancellation_ Analysing Patterns and Strategies for Improvement - Summary.pdf" target="_blank">Survey Analysis Report</a>
         </li>
         <li>
           <i class="fas fa-file-pdf"></i>
           <a href="reports/business_intelligence_summary.pdf" target="_blank">Business Intelligence Summary</a>
+        </li>
+        <li>
+          <i class="fas fa-file-pdf"></i>
+          <a href="reports/Hospital A Poject Update.pdf" target="_blank">Project Update Report</a>
         </li>
       </ul>
     </section>
