--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       <!-- Swiper Carousel -->
       <div class="swiper mySwiper">
         <div class="swiper-wrapper">
-          <div class="swiper-slide"><img src="images/project1.png" alt="Project 1"></div>
+          <div class="swiper-slide"><img src="images/Project 1.jpg" alt="Project 1"></div>
           <div class="swiper-slide"><img src="images/project2.png" alt="Project 2"></div>
           <div class="swiper-slide"><img src="images/project3.png" alt="Project 3"></div>
           <div class="swiper-slide"><img src="images/project4.png" alt="Project 4"></div>
