--- a/index.html
+++ b/index.html
@@ -53,14 +53,14 @@
       <!-- Swiper Carousel -->
       <div class="swiper mySwiper">
         <div class="swiper-wrapper">
-          <div class="swiper-slide"><img src="images/Project 1.jpg" alt="Project 1"></div>
-          <div class="swiper-slide"><img src="images/project2.png" alt="Project 2"></div>
-          <div class="swiper-slide"><img src="images/project3.png" alt="Project 3"></div>
+          <div class="swiper-slide"><img src="images/Project 9.jpg" alt="Project 1"></div>
+          <div class="swiper-slide"><img src="images/Project 10.png" alt="Project 2"></div>
+          <!--<div class="swiper-slide"><img src="images/project3.png" alt="Project 3"></div>
           <div class="swiper-slide"><img src="images/project4.png" alt="Project 4"></div>
           <div class="swiper-slide"><img src="images/project5.png" alt="Project 5"></div>
           <div class="swiper-slide"><img src="images/project6.png" alt="Project 6"></div>
           <div class="swiper-slide"><img src="images/project7.png" alt="Project 7"></div>
-          <div class="swiper-slide"><img src="images/project8.png" alt="Project 8"></div>
+          <div class="swiper-slide"><img src="images/project8.png" alt="Project 8"></div>-->
         </div>
         <!-- Navigation buttons -->
         <div class="swiper-button-next"></div>
@@ -75,18 +75,18 @@
       <h2>Sample Reports</h2>
       <p>Download or view my sample dashboards and reports in PDF format:</p>
       <ul class="reports">
-        <li>
+        <!--<li>
           <i class="fas fa-file-pdf"></i>
           <a href="reports/financial_dashboard.pdf" target="_blank">Financial Dashboard Report</a>
-        </li>
+        </li>-->
         <li>
           <i class="fas fa-file-pdf"></i>
           <a href="reports/Ride Cancellation_ Analysing Patterns and Strategies for Improvement - Summary.pdf" target="_blank">Survey Analysis Report</a>
         </li>
-        <li>
+        <!--<li>
           <i class="fas fa-file-pdf"></i>
           <a href="reports/business_intelligence_summary.pdf" target="_blank">Business Intelligence Summary</a>
-        </li>
+        </li>-->
         <li>
           <i class="fas fa-file-pdf"></i>
           <a href="reports/Hospital A Poject Update.pdf" target="_blank">Project Update Report</a>
