--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
       <div class="swiper mySwiper">
         <div class="swiper-wrapper">
           <div class="swiper-slide"><img src="images/Project 9.jpg" alt="Project 1"></div>
-          <div class="swiper-slide"><img src="images/Project 10.png" alt="Project 2"></div>
+          <div class="swiper-slide"><img src="images/Project 10.jpg" alt="Project 2"></div>
           <!--<div class="swiper-slide"><img src="images/project3.png" alt="Project 3"></div>
           <div class="swiper-slide"><img src="images/project4.png" alt="Project 4"></div>
           <div class="swiper-slide"><img src="images/project5.png" alt="Project 5"></div>
